--- a/examples/index.html
+++ b/examples/index.html
@@ -143,6 +143,10 @@
         </div>
 
         <div id="viewer" class="d-none">
+            <h3 id="logs-header">Webrtc Evaluation</h3>
+            <div class="card bg-light mb-3">
+                <div id="webrtc-evaluation"></div>
+            </div>
             <h2>Viewer</h2>
             <div class="row">
                 <div class="col">
@@ -151,7 +155,7 @@
                 </div>
                 <div class="col">
                     <h5>From Master</h5>
-                    <div class="video-container"><video class="remote-view" autoplay playsinline controls /></div>
+                    <div class="video-container"><video id="calc-stat-video" class="remote-view" autoplay playsinline controls /></div>
                 </div>
             </div>
             <div class="row datachannel">
@@ -174,6 +178,10 @@
             </div>
         </div>
 
+        <h3 id="logs-header">Evluation Debug</h3>
+        <div class="card bg-light mb-3">
+            <div id="stats"></div>
+        </div>
         <h3 id="logs-header">Logs</h3>
         <div class="card bg-light mb-3">
             <pre id="logs" class="card-body text-monospace preserve-whitespace"></pre>
@@ -184,7 +192,8 @@
 
 <div id="test"></div>
 
-<script src="../kvs-webrtc.js"></script>
+<!--<script src="../kvs-webrtc.js"></script>-->
+<script src="https://unpkg.com/amazon-kinesis-video-streams-webrtc/dist/kvs-webrtc.min.js"></script>
 <script src="./master.js"></script>
 <script src="./viewer.js"></script>
 <script src="./createSignalingChannel.js"></script>
