Add WebRTC Connection Stats to show final chosen candidate pair

--- a/examples/index.html
+++ b/examples/index.html
@@ -178,7 +178,11 @@
             </div>
         </div>
 
-        <h3 id="logs-header">Evluation Debug</h3>
+        <h3 id="logs-header">Webrtc Candidates</h3>
+        <div class="card bg-light mb-3">
+            <div class="stats-box"></div>
+        </div>
+        <h3 id="logs-header">Evaluation Debug</h3>
         <div class="card bg-light mb-3">
             <div id="stats"></div>
         </div>
